@startuml base_model

' !include output_heads.puml

package base_model {

    package model {
        abstract class Model {
            + hparams: Model.HParams
            + encoder: nn.Module
            + output_head: OutputHead
            + forward(Observations): ForwardPass
            + get_loss(ForwardPass, Rewards): Loss
            + get_actions(observations: Observations, action_space: Space): Actions
        }
        ' class Model.HParams extends BaseHParams {}
        ' class BaseHParams {
        class Model.HParams {
            {static} + available_optimizers: Dict[str, Type[Optimizer]]
            {static} + available_encoders: Dict[str, Type[nn.Module]]

            + learning_rate: float = 0.001
            + weight_decay: float = 1e-6
            + optimizer: str = "adam"
            + encoder: str = "resnet18"
            + batch_size: Optional[int]
            + train_from_scratch: bool = False
            + freeze_pretrained_encoder_weights: bool = False
            + output_head: OutputHead.HParams
            + detach_output_head: bool = False
        }
        
    }

    together {
        package semi_supervised_model {
            abstract class SemiSupervisedModel extends Model {
                + forward(Observations): ForwardPass
                + get_loss(ForwardPass, Optional[Rewards]): Loss
            }
            abstract class SemiSupervisedModel.HParams extends Model.HParams {
                + knn_callback: KnnCallback note (todo: unused atm)
            }
        }
        package self_supervised_model {
            abstract class SelfSupervisedModel extends Model {
                + hparams: SelfSupervisedModel.HParams
                + tasks: dict[str, AuxiliaryTask]
                + add_auxiliary_task(task AuxiliaryTask)
            }
            abstract class SelfSupervisedModel.HParams extends Model.HParams {
                + simclr: Optional[SimCLRTask.Options]
                + vae: Optional[VAEReconstructionTask.Options]
                + ae: Optional[AEReconstructionTask.Options]
                + ewc: Optional[EWCTask.Options]
            }
        }

        package multihead_model {
            abstract class MultiHeadModel extends Model {
                + output_heads: dict[str, OutputHead]
                + forward(Observations): ForwardPass
                + on_task_switch(task_id: Optional[int])
            }

            abstract class MultiHeadModel.HParams extends Model.HParams {
                + multihead: Optional[bool]
            }
        }
    }
    package base_model as base_model.base_model {
        class BaseModel extends SemiSupervisedModel, SelfSupervisedModel, MultiHeadModel
        {
            + hparams: BaseModel.HParams
        }
        class BaseModel.HParams extends SelfSupervisedModel.HParams, MultiHeadModel.HParams, SemiSupervisedModel.HParams {
        }
    }

Model "1" *-- "1" OutputHead
' Model *-- Model.HParams
' BaseModel *-- BaseModel.HParams
' SemiSupervisedModel *-- SemiSupervisedModel.HParams
' SelfSupervisedModel *-- SelfSupervisedModel.HParams
' MultiHeadModel *-- MultiHeadModel.HParams
SelfSupervisedModel "1" o-- "many" aux_tasks.AuxiliaryTask
' BaseMethod "1" *--> "1" BaseModel : uses
MultiHeadModel "1" *-- "many" OutputHead
' MultiHeadModel "1" *-- "1" OutputHead

}
@enduml
